SERVER-12242 SERVER-12244 Fix typo in compact/reIndex error messages

The error messages originally were incorrectly swapped with one
another.

(cherry picked from commit df0236cab083063fd125e289c6bac6b017bc6b67)